# WGCapturer

./: CMakeLists.txt  README.md
WGCapturer/: CMakeLists.txt  WGCapturer.cpp  WGCapturer.h  main.cpp  pch.h  util.cpp  util.h
WGCapturer/ext/wil/: com.h  registry_helpers.h  resource.h  stl.h  win32_helpers.h
tester/: CMakeLists.txt  main.cpp
